--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "alchemy-sdk": "^2.10.0",
+    "alchemy-sdk": "^2.10.1",
     "axios": "^1.5.1",
+    "ethers": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
